--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,17 +2,16 @@
 .. link: 
 .. description: 
 .. tags: 
-.. date: 2014/02/08 12:30:42
 .. title: Contact
 .. slug: contact
 -->
 
 <table>
 <tr><td>Email</td><td><img src="/images/email_address.png"></td></tr>
-<tr><td>Phone</td><td>630.252.6339</td></tr>
-<tr><td >Address</td>
+<tr><td>Office</td><td>LBL 50-5032</td></tr>
+<tr><td>Address</td>
 <td>Kyle Barbary<br>
-Argonne National Laboratory<br>
-9700 S. Cass Avenue, Bldg 360<br>
-Argonne, IL 60439-4814</td></tr>
+MS 50-5008<br>
+Lawrence Berkeley National Lab<br>
+Berkeley, CA 94720</td></tr>
 </table>
