--- a/pages/index.html
+++ b/pages/index.html
@@ -35,20 +35,18 @@
 </ul>
 </div>
 
-<p>Hello! I'm a data scientist at The Climate Corporation, where I'm using weather
-and agronomic data to build predictive models of crop diseases. I spend my time doing
-a little machine learning, a fair bit of statistics, and a lot of thinking about
-potential bias.</p>
+<p>Hello! I'm a data scientist at Zymergen. Zymergen creates novel materials using microorganisms. We do this using a combination of rational genetic edits and high-throughput testing to determine which edits worked and which didn't. As a data scientist, I build models to separate signal from noise and find the successful needle in the haystack of all our attempted edits.
+</p>
 
 
 <h4 class="section-heading text-uppercase">Astronomy</h4>
 
-<p>Before joining The Climate Corporation, I got a PhD in physics from UC Berkeley
+<p>Before becoming a data scientist in 2018, I got a PhD in physics from UC Berkeley
    in 2011, where I studied
    supernova cosmology under Saul Perlmutter. I was later a Director's Fellow at
    Argonne National Lab, a Data Science Fellow at the
    <a href="http://bids.berkeley.edu">Berkeley Institute for Data Science</a> (BIDS), and
-   most recently a Project Scientist in the Physics Department at UC Berkeley.
+   until late 2017, a Project Scientist in the Physics Department at UC Berkeley.
 </p>
 
 <p>During my astronomy career, I worked with large data sets
@@ -107,7 +105,7 @@ Here are a few highlights:</p>
 </tr>
 </table>
 
-<p>For a complete list of publications, see <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?db_key=AST&db_key=PHY&db_key=PRE&qform=AST&arxiv_sel=astro-ph&arxiv_sel=cond-mat&arxiv_sel=cs&arxiv_sel=gr-qc&arxiv_sel=hep-ex&arxiv_sel=hep-lat&arxiv_sel=hep-ph&arxiv_sel=hep-th&arxiv_sel=math&arxiv_sel=math-ph&arxiv_sel=nlin&arxiv_sel=nucl-ex&arxiv_sel=nucl-th&arxiv_sel=physics&arxiv_sel=quant-ph&arxiv_sel=q-bio&sim_query=YES&ned_query=YES&adsobj_query=YES&aut_logic=OR&obj_logic=OR&author=Barbary%2C+K&object=&start_mon=&start_year=&end_mon=&end_year=&ttl_logic=OR&title=&txt_logic=OR&text=&nr_to_return=200&start_nr=1&article_sel=YES&jou_pick=NO&ref_stems=&data_and=ALL&group_and=ALL&start_entry_day=&start_entry_mon=&start_entry_year=&end_entry_day=&end_entry_mon=&end_entry_year=&min_score=&sort=SCORE&data_type=SHORT&aut_syn=YES&ttl_syn=YES&txt_syn=YES&aut_wt=1.0&obj_wt=1.0&ttl_wt=0.3&txt_wt=3.0&aut_wgt=YES&obj_wgt=YES&ttl_wgt=YES&txt_wgt=YES&ttl_sco=YES&txt_sco=YES&version=1">this ADS query</a>.
+<p>For a complete list of publications, see <a href="https://ui.adsabs.harvard.edu/search/filter_property_fq_property=AND&filter_property_fq_property=property%3A%22refereed%22&fq=%7B!type%3Daqp%20v%3D%24fq_property%7D&fq_property=(property%3A%22refereed%22)&q=%20author%3A%22Barbary%2C%20K%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">this ADS query</a>.
 </p>
 
 <h4 class="section-heading">Outdoors</h4>
